@@ -1,7 +1,4 @@
-display name web.xml with app name
 create others persistence unit(maven profile?)
-new java keyword(how to call new method in controller?)
-create "partial" to form
 update jpa to jpa2(hibernate 3.5.?-FINAL)
 datetime, date and time support.(jquery-ui?)
 relationship support(many-to-one, one-to-many, many-to-many)
@@ -11,5 +8,8 @@ usage file to each generator
 gem description
 http://waffle.codehaus.org
 put all html input in macros
-i18n
-error message
+i18n messages
+xstream
+context.xml
+it works on windowns?
+hibernate joda-time support
