@@ -49,6 +49,7 @@ class AppGenerator < VraptorScaffold::Base
       empty_directory main_resources
       inside main_resources do
         template_from_root("log4j.properties", "#{main_resources}/log4j.properties")
+        template_from_root("messages.properties", "#{main_resources}/messages.properties")
         meta_inf = empty_directory "META-INF"
         template_from_root("persistence.xml", "#{meta_inf}/persistence.xml")
       end
