@@ -1,22 +1,0 @@
-<body>
-
-<form action="<%= path %>" method="post">
-
-  <input type="hidden" name="<%= "#{@model}.id" %>" value="<%= "${#{@model}.id}" %>"/>
-  <input type="hidden" name="_method" value="put"/>
-
-<% @attributes.each do |att| -%>
-  <div class="field">
-    <%= att.name.capitalize %>:<br />
-    <%= "<@html.#{att.html_input} \"#{@model}.#{att.name}\" #{@model}.#{att.name}/>"  %>
-  </div>
-<% end -%>
-  <div class="actions">
-    <button type="submit">update</button>
-  </div>
-</form>
-
-<a href="<%= path %>">Back</a>
-	
-</body>
-
