@@ -1,17 +1,0 @@
-<body>
-
-<form action="<%= path %>" method="post">
-<% @attributes.each do |att| -%>
-  <div class="field">
-    <%= att.name.capitalize %>:<br />
-    <%= "<@html.#{att.html_input} \"#{@model}.#{att.name}\"/>"  %>
-  </div>
-<% end -%>
-  <div class="actions">
-    <input type="submit" value="create">
-  </div>
-</form>
-
-<a href="<%= path %>">Back</a>
-	
-</body>
