@@ -9,7 +9,7 @@ Gem::Specification.new do |s|
 
   s.required_rubygems_version = Gem::Requirement.new("> 1.3.1") if s.respond_to? :required_rubygems_version=
   s.authors = ["Rodolfo Liviero"]
-  s.date = %q{2010-07-17}
+  s.date = %q{2010-07-18}
   s.default_executable = %q{vraptor}
   s.description = %q{}
   s.email = %q{rodolfoliviero@gmail.com}
@@ -37,6 +37,7 @@ Gem::Specification.new do |s|
      "lib/generators/app_generator/templates/log4j.properties",
      "lib/generators/app_generator/templates/macros/html.ftl",
      "lib/generators/app_generator/templates/main.ftl",
+     "lib/generators/app_generator/templates/messages.properties",
      "lib/generators/app_generator/templates/persistence.xml",
      "lib/generators/app_generator/templates/pom.erb",
      "lib/generators/app_generator/templates/stylesheets/scaffold.css",
@@ -47,9 +48,8 @@ Gem::Specification.new do |s|
      "lib/generators/scaffold_generator/controller_generator/controller_generator.rb",
      "lib/generators/scaffold_generator/controller_generator/templates/controller.erb",
      "lib/generators/scaffold_generator/freemarker_generator/freemarker_generator.rb",
-     "lib/generators/scaffold_generator/freemarker_generator/templates/edit.erb",
+     "lib/generators/scaffold_generator/freemarker_generator/templates/form.erb",
      "lib/generators/scaffold_generator/freemarker_generator/templates/index.erb",
-     "lib/generators/scaffold_generator/freemarker_generator/templates/new.erb",
      "lib/generators/scaffold_generator/freemarker_generator/templates/show.erb",
      "lib/generators/scaffold_generator/model_generator/model_generator.rb",
      "lib/generators/scaffold_generator/model_generator/templates/model.erb",
